# bib-formatter

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  reference.bib  reference_formatted.bib
.github/workflows/: ci.yml
bibformatter/: __init__.py  __main__.py  cli.py  config.py  matching.py  net.py  normalize.py  parser.py  providers.py  report.py  schema.py  venues.py  verify.py  writer.py
tests/: test_cli.py  test_matching.py  test_net.py  test_normalize.py  test_schema.py  test_venues.py  test_verify.py
tests/fixtures/: sample.bib
